--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "node-forge": "^1.3.1",
     "nodemailer": "^6.9.7",
     "path": "^0.12.7",
+    "postgres": "^3.4.7",
     "qrcode": "^1.5.3",
     "sequelize": "^6.37.5",
     "sequelize-typescript": "^2.1.6",
@@ -68,7 +69,7 @@
     "eslint-config-prettier": "^8.8.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.22",
-    "pg": "^8.11.0",
+    "pg": "^8.16.3",
     "prettier": "^2.8.8",
     "sequelize-cli": "^6.6.2",
     "ts-node": "^10.9.2",
