--- a/render.yaml
+++ b/render.yaml
@@ -7,7 +7,7 @@ services:
     buildCommand: |
       npm install
       npm run tsc
-    startCommand: npm start
+    startCommand: node dist/server.js
     envVars:
       - key: NODE_ENV
         value: development
