change start in package json

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "tsc-watch": "tsc --w",
     "tsc": "tsc",
     "dev": "cross-env NODE_ENV=development nodemon dist/server",
-    "start": "cross-env NODE_ENV=development node dist/server",
+    "start": "node dist/server.js",
     "dev-migrate-up": "cross-env NODE_ENV=development sequelize db:migrate",
     "dev-migrate-down": "cross-env NODE_ENV=development sequelize db:migrate:undo",
     "dev-migrate-down-all": "cross-env NODE_ENV=development sequelize db:migrate:undo:all",
