--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "be",
   "version": "1.0.0",
-  "main": "server.js",
+"main": "dist/server.js",
   "scripts": {
     "format:check": "prettier --check ./src/*",
     "format:write": "prettier --write ./src/*",
     "lint:check": "eslint --no-error-on-unmatched-pattern .",
     "lint:fix": "eslint --no-error-on-unmatched-pattern --fix .",
     "tsc-watch": "tsc --w",
+      "build": "tsc",
     "tsc": "tsc",
     "dev": "cross-env NODE_ENV=development nodemon dist/server",
     "start": "node dist/server.js",
