--- a/package.json
+++ b/package.json
@@ -1,17 +1,16 @@
 {
   "name": "be",
   "version": "1.0.0",
-"main": "dist/server.js",
+  "main": "server.js",
   "scripts": {
     "format:check": "prettier --check ./src/*",
     "format:write": "prettier --write ./src/*",
     "lint:check": "eslint --no-error-on-unmatched-pattern .",
     "lint:fix": "eslint --no-error-on-unmatched-pattern --fix .",
     "tsc-watch": "tsc --w",
-      "build": "tsc",
     "tsc": "tsc",
     "dev": "cross-env NODE_ENV=development nodemon dist/server",
-    "start": "node dist/server.js",
+    "start": "cross-env NODE_ENV=development node dist/server",
     "dev-migrate-up": "cross-env NODE_ENV=development sequelize db:migrate",
     "dev-migrate-down": "cross-env NODE_ENV=development sequelize db:migrate:undo",
     "dev-migrate-down-all": "cross-env NODE_ENV=development sequelize db:migrate:undo:all",
