--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@supabase/supabase-js": "^2.52.0",
     "@types/node-forge": "^1.3.11",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
